scss/illinois-framework/_paragraphs.faculty-explorer.scss
.paragraph--type--faculty-explorer__wrapper {
  margin-bottom: 48px;
}

@media (min-width: 992px) {
  .fixed-width {
    max-width: 900px;
    padding: 0;
  }
}

.faculty-explorer {
  &--title {
    margin: 24px 41px 101px 35px;
    font-family: "Source Sans Pro", "Lucida Grande", sans-serif;
    font-size: 64px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: 0.81;
    letter-spacing: normal;
    text-align: left;
    color: #13294b;
  }

  &--header {
    margin-top: 70px;
    font-family: var(--il-source-sans);
    font-size: 32px;
    font-weight: 600;
    color: #ff552e;
  }

  &--description {
    font-family: var(--il-source-sans);
    font-size: 18px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.75;
    letter-spacing: normal;
    text-align: left;
    color: #252525;
    margin-bottom: 20px;
  }

  &--select {
    font-size: 18px;
    padding: 0 21px 0 21px;
    border-radius: 5px;
    border: solid 1px #d8d8d8;
  }

  &--result {
    &--descriptions {
      margin-top: 24px;
    }

    &--area {
      width: 100%;
      display: inline-block;
      margin-top: 34px;

      &-description {
        &--image {
          float: left;

          & img {
            max-width: 255px;
            max-height: 192px;
          }
        }
        &--text {
          width: 70%;
          float: left;
          padding-left: 33px;
          font-family: var(--il-source-sans);
          font-size: 18px;
          color: #252525;

          &--title {
              font-family: var(--il-source-sans);
              font-size: 24px;
              font-weight: bold;
              color: #13294b;
          }
        }
      }
    }

    &--faculty {
      margin-top: 60px;

      &--title {
        font-family: var(--il-source-sans);
        font-size: 24px;
        font-weight: bold;
        color: #13294b;
      }
    }
  }

}

.directorySection {
  display: flex;
  flex-wrap: wrap;

  &--person {
    margin-right: 35px;
    margin-top: 20px;
    margin-bottom: 20px;

    &--photo {
      width: 160px;
      max-height: 200px;
      overflow: hidden;
    }

    &--role {
      max-width: 160px;
      margin-top: 16px;

      & .name {
        font-size: 17px;
        line-height: 1.1;
        font-weight: 800;
      }

      & .title {
        padding-top: 5px;
        line-height: 1.1;
      }
    }
  }
}

